build pass without checkstyle or javadoc warnings